Preferences.css : Brighter color for disabled items. Was incredible hard to read the value.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8290 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -39,7 +39,7 @@ input, button, select, textarea
 
 input[disabled], button[disabled], select[disabled], textarea[disabled]
 {
-	background-color: #999;
+	background-color: #ccc;
 }
 
 button.active
