--- a/content/resources/css/embed-media.css
+++ b/content/resources/css/embed-media.css
@@ -65,10 +65,14 @@ html[dir="ltr"] div.ft-media-site-flickr.ft-media-expander-expanded {
 html[dir="ltr"] div.ft-media-site-flickr.ft-media-expander-unexpanded {
 	background-image: url("chrome://foxtrick/content/resources/img/icons/flickr_down.png");
 }
-html[dir="ltr"] div.ft-media-site-genericImage.ft-media-expander-expanded {
+html[dir="ltr"] div.ft-media-site-genericImage.ft-media-expander-expanded,
+html[dir="ltr"] div.ft-media-site-imgur.ft-media-expander-expanded,
+html[dir="ltr"] div.ft-media-site-imageshack.ft-media-expander-expanded {
 	background-image: url("chrome://foxtrick/content/resources/img/icons/generic_up.png");
 }
-html[dir="ltr"] div.ft-media-site-genericImage.ft-media-expander-unexpanded {
+html[dir="ltr"] div.ft-media-site-genericImage.ft-media-expander-unexpanded,
+html[dir="ltr"] div.ft-media-site-imgur.ft-media-expander-unexpanded,
+html[dir="ltr"] div.ft-media-site-imageshack.ft-media-expander-unexpanded {
 	background-image: url("chrome://foxtrick/content/resources/img/icons/generic_down.png");
 }
 div.ft-media-container {
@@ -127,10 +131,14 @@ html[dir="rtl"] div.ft-media-site-flickr.ft-media-expander-expanded {
 html[dir="rtl"] div.ft-media-site-flickr.ft-media-expander-unexpanded {
 	background-image: url("chrome://foxtrick/content/resources/img/icons/flickr_down_rtl.png");
 }
-html[dir="rtl"] div.ft-media-site-genericImage.ft-media-expander-expanded {
+html[dir="rtl"] div.ft-media-site-genericImage.ft-media-expander-expanded,
+html[dir="rtl"] div.ft-media-site-imgur.ft-media-expander-expanded,
+html[dir="rtl"] div.ft-media-site-imageshack.ft-media-expander-expanded {
 	background-image: url("chrome://foxtrick/content/resources/img/icons/generic_up_rtl.png");
 }
-html[dir="rtl"] div.ft-media-site-genericImage.ft-media-expander-unexpanded {
+html[dir="rtl"] div.ft-media-site-genericImage.ft-media-expander-unexpanded,
+html[dir="rtl"] div.ft-media-site-imgur.ft-media-expander-unexpanded,
+html[dir="rtl"] div.ft-media-site-imageshack.ft-media-expander-unexpanded {
 	background-image: url("chrome://foxtrick/content/resources/img/icons/generic_down_rtl.png");
 }
 }
