--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -223,6 +223,11 @@ html[data-theme="simple"] .transferPlayerInformation {
 html[data-theme="simple"] #ctl00_ctl00_CPContent_CPMain_UpdatePanelLiveLeagueTable {
 	white-space: nowrap;
 }
+/* smaller league table for eastern */
+html[data-theme="simple"] body[style*="font-size:0.79em;"] #ctl00_ctl00_CPContent_CPMain_UpdatePanelLiveLeagueTable {
+	font-size:0.9em;
+}
+
 
 #ft-monitor-sidebar-box {
 	overflow: hidden;
