log.js: fixed html log for sandboxed and fenned somewhat
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8328 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -119,6 +119,11 @@ td.ft-lineup-cell { vertical-align: middle !important; }
 	overflow: auto;
 }
 
+/* max-height no good for mobile devices */
+#ctl00_ctl00_pnlMobileLink+form #ft-log {
+	max-height: none !important;
+}
+
 #ft-log h2 {
 	margin: 6px 0 15px 6px !important;
 }
