forum-mod-link-icons.css: rtl fix (guessed)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8346 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/forum-mod-link-icons.css
+++ b/content/resources/css/forum-mod-link-icons.css
@@ -1,12 +1,23 @@
 .ft-mod-link-icons {
 	padding-bottom: 26px; 
+}
+html[dir="ltr"] .ft-mod-link-icons {
 	padding-right: 1px;
+}
+html[dir="rtl"] .ft-mod-link-icons {
+	padding-left: 1px;
 }
 
 .ft-mod-link {
-	float:right; 
 	position: relative; 
 	top: -15px; 
-	margin-left: 3px; 
 	z-index: 99;
+}
+html[dir="ltr"]  .ft-mod-link {
+	float:right; 
+	margin-left: 3px; 
+}
+html[dir="rtl"]  .ft-mod-link {
+	float:left; 
+	margin-right: 3px; 
 }
