crowdin : Renamed es, pt, pt_BR, nn, sv, zh, zh to crowdin compatible codes
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8401 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/forum-direct-page-links.css
+++ b/content/resources/css/forum-direct-page-links.css
@@ -4,9 +4,8 @@
 }
 .pager a.page.oneDigit {
 	line-height:22px;
-	margin-left: 1px;
-	padding-left: 9px;
-	padding-right: 8px;
+	padding-left: 9px  !important;
+	padding-right: 8px  !important;
 }
 
 .pager {
