forum-direct-page-links.css : Reverted to last version
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8403 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/forum-direct-page-links.css
+++ b/content/resources/css/forum-direct-page-links.css
@@ -4,10 +4,12 @@
 }
 .pager a.page.oneDigit {
 	line-height:22px;
-	padding-left: 9px  !important;
-	padding-right: 8px  !important;
+	margin-left: 1px;
+	padding-left: 9px;
+	padding-right: 8px;
 }
 
 .pager {
 	text-align:center;
 }
+
