forum-direct-page-links.css : css fixes
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8410 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/forum-direct-page-links.css
+++ b/content/resources/css/forum-direct-page-links.css
@@ -1,12 +1,10 @@
 .pager a.page {
-	line-height:22px;
+	line-height:22px !important;
 	margin-left: 1px;
 }
 .pager a.page.oneDigit {
-	line-height:22px;
-	margin-left: 1px;
-	padding-left: 9px;
-	padding-right: 8px;
+	padding-left: 8px !important;
+	padding-right: 8px !important;
 }
 
 .pager {
