--- a/content/resources/css/forum-direct-page-links.css
+++ b/content/resources/css/forum-direct-page-links.css
@@ -9,10 +9,5 @@
 
 .pager {
 	text-align:center;
-	margin-bottom: 12px;
+	margin-bottom: 6px !important;
 }
-
-.left {
-	float:left !important;
-}
-
