extra-shortcuts/space.css: nonsupporter extraspace set to 2 icons
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8462 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/extra-shortcuts-space.css
+++ b/content/resources/css/extra-shortcuts-space.css
@@ -4,10 +4,11 @@
 {display:none;}
 
 div#shortcuts, 
-div#shortcuts div.scContainer, 
+div#shortcuts div.scContainer
+{width: 324px !important;}
 div#shortcutsNoSupporter, 
 div#shortcutsNoSupporter div.scContainerNoSupporter 
-{width: 324px !important;}
+{width: 200px !important;}
 
 html[data-theme="standard"] #ticker, html[data-theme="standard"] #ticker div {
 	width: 400px !important;
