general bellow->below fix
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8474 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-simulator.css
+++ b/content/resources/css/match-simulator.css
@@ -127,7 +127,7 @@ html[dir="ltr"] .overlayMidDefense, .overlayMidAttack {
 
 
 /* field overlay display options */
-#fieldOverlay.displayBellow {
+#fieldOverlay.displayBelow {
 	height: 520px;
 	position: relative;
 	top: 630px !important;
