extra-shortcuts.css : Give the Foxtrick buttom some room, it looked very squized.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8584 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/extra-shortcuts.css
+++ b/content/resources/css/extra-shortcuts.css
@@ -22,6 +22,7 @@
 
 .ftSCFtPrefs {
 	margin-left:2px;
+	margin-right:4px;
 	background-image: url('chrome://foxtrick/content/resources/img/shortcuts/foxtrick.png') !important;
 }
 
