rapidid.css : Lift inputs a bit to match text height
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8614 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/rapidid.css
+++ b/content/resources/css/rapidid.css
@@ -7,3 +7,4 @@ html[data-theme="simple"] #ft_rapidid_form { font-size: 1.1em; }
 html[data-theme="simple"] #ft_rapidid_container { font-size: 100%; }
 
 html[data-theme="simple"] #ft_rapidid_form { z-index: 999; position: relative; bottom: 10px; background-color: white;}
+html[data-theme="standard"] #ft_rapidid_form { position: relative; bottom: 6px; }
