header-fix-left.css: typo
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8780 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/header-fix-left.css
+++ b/content/resources/css/header-fix-left.css
@@ -25,7 +25,7 @@ html[dir="ltr"] #content #mainWrapper {
 html[dir="rtl"] #content #mainWrapper {
 	float:left;
 }
-html[dir="rtl"] #sidebar {
+html[dir="ltr"] #sidebar {
 	margin-left: 10px;
 }
 html[dir="rtl"] #sidebar {
