css files: wrapped all needed in @moz-doc
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8802 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/cross-table.css
+++ b/content/resources/css/cross-table.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 #ft-cross-table td {
 	text-align: center !important;
 }
@@ -10,4 +12,6 @@
 .ft-cross-table-div  td{
 	background-color: white;
 	white-space: nowrap;
+}
+
 }
