--- a/content/resources/css/seasonstats.css
+++ b/content/resources/css/seasonstats.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 .ft_seasonstats_td {
     padding: 0 1px !important;
 }
@@ -7,4 +9,6 @@
 
 #foxtrick_seasonstats_content th {
 	border-bottom: 2px solid #849D84 !important;
+}
+
 }
