--- a/content/resources/css/FoxtrickMatchTables_matches.css
+++ b/content/resources/css/FoxtrickMatchTables_matches.css
@@ -1,6 +1,4 @@
-
-@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
-
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 #mainBody table {margin-left:-8px;width:440px !important;}
 #mainBody table tr>td+td+td+td+td+td+td {display:none;}
 #mainBody table tr td {margin-right:2px !important; padding-right:3px !important;}
