--- a/content/resources/css/backgroundfixed.css
+++ b/content/resources/css/backgroundfixed.css
@@ -1,6 +1,8 @@
 /* backgroundFixed @author smates */
-@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
-body{
-background-attachment: fixed !important;
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
+body {
+	background-attachment: fixed !important;
 }
+
 }
