--- a/content/resources/css/copy-player-ad.css
+++ b/content/resources/css/copy-player-ad.css
@@ -1,7 +1,11 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 html[data-theme="standard"] .copyicon.ft-copy-player-ad {
 	background-image: url("chrome://foxtrick/content/resources/img/copy/copyPlayerAd.png");
 }
 
 html[data-theme="simple"] .copyicon.ft-copy-player-ad {
 	background-image: url("chrome://foxtrick/content/resources/img/copy/copyPlayerAd_s.png");
+}
+
 }
