--- a/content/resources/css/copy-youth.css
+++ b/content/resources/css/copy-youth.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 html[data-theme="standard"] .copyicon.ft-copy-training-report {
 	background-image: url("chrome://foxtrick/content/resources/img/copy/copyTrainingReport.png");
 }
@@ -27,4 +29,6 @@ html[data-theme="standard"] .copyicon.ft-copy-fixtures-source {
 }
 html[data-theme="simple"] .copyicon.ft-copy-fixtures-source {
 	background-image: url("chrome://foxtrick/content/resources/img/copy/copyNormal_s.png");
+}
+
 }
