--- a/content/resources/css/embed-media.css
+++ b/content/resources/css/embed-media.css
@@ -1,7 +1,5 @@
-@-moz-document domain(hattrick.org), 
-domain(hattrick.uol.com.br), 
-domain(hattrick.interia.pl), 
-domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 /*ft-embed-media expander prototype*/
 /*ltr*/
 div.ft-media-expander-unexpanded,
@@ -141,4 +139,5 @@ html[dir="rtl"] div.ft-media-site-imgur.ft-media-expander-unexpanded,
 html[dir="rtl"] div.ft-media-site-imageshack.ft-media-expander-unexpanded {
 	background-image: url("chrome://foxtrick/content/resources/img/icons/generic_down_rtl.png");
 }
+
 }
