--- a/content/resources/css/fixes/Forum_FoxLink_Headers.css
+++ b/content/resources/css/fixes/Forum_FoxLink_Headers.css
@@ -1,4 +1,4 @@
-@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
 .cfHeader a.bookmarkSmall {
     display:none
