--- a/content/resources/css/fixes/Forum_Header_RemoveSupporterStar.css
+++ b/content/resources/css/fixes/Forum_Header_RemoveSupporterStar.css
@@ -1,4 +1,4 @@
-@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
    .cfHeader img[src="/Img/Icons/micro_star.gif"] {display:none !important; padding-left: -3px;}
    .cfHeader img[src="/Img/icons/micro_star.gif"] {display:none !important; padding-left: -3px;}
