--- a/content/resources/css/fixes/HideLeagueInForumHeader.css
+++ b/content/resources/css/fixes/HideLeagueInForumHeader.css
@@ -1,4 +1,4 @@
-@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
 div.mainConf  div.cfHeader a[class="flag inner"] + a {display:none;}
 
