--- a/content/resources/css/fixes/NoLogo.css
+++ b/content/resources/css/fixes/NoLogo.css
@@ -1,3 +1,3 @@
-@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 .teamLogo {display:none}
 }
