--- a/content/resources/css/fixes/moved_avatarinfo_fix.css
+++ b/content/resources/css/fixes/moved_avatarinfo_fix.css
@@ -1,4 +1,4 @@
-@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
 div.mainConf div.cfInnerWrapper, div.mainConf div.cfInnerWrapperGreen , div.mainConf div.cfInnerWrapperRed  {margin-top:20px;}
 .cfUser, .cfMessage {margin-top:-20px !important;}
