--- a/content/resources/css/fixes/staffmarker.css
+++ b/content/resources/css/fixes/staffmarker.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 .boxBody .teamInfo a[title^="HT-"],
 .boxBody #ctl00_ctl00_CPContent_CPMain_pnlMySupporters a[title^="HT-"],
 #sidebar a[title^="HT-"][href*="userId"],
@@ -54,4 +56,6 @@
 #sidebar a:hover,
 .feedItem .shy a:hover {
 	text-decoration:underline;
+}
+
 }
