--- a/content/resources/css/flags.css
+++ b/content/resources/css/flags.css
@@ -1,3 +1,4 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 .flag > img { background-image: url("chrome://foxtrick/content/resources/img/flags.gif"); }
 .flag0 { background-position: 0px 0px; }
 .flag1 { background-position: -20px 0px; }
@@ -179,3 +180,5 @@
 .flag177 { background-position: -3540px 0px; }
 .flag178 { background-position: -3560px 0px; }
 .flag179 { background-position: -3580px 0px; }
+
+}
