--- a/content/resources/css/forum-direct-page-links.css
+++ b/content/resources/css/forum-direct-page-links.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 .pager a.page {
 	line-height:22px !important;
 	margin-left: 1px;
@@ -10,4 +12,6 @@
 .pager {
 	text-align:center;
 	margin-bottom: 6px !important;
+}
+
 }
