--- a/content/resources/css/forum-mod-link-icons.css
+++ b/content/resources/css/forum-mod-link-icons.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 .ft-mod-link-icons {
 	padding-bottom: 26px; 
 }
@@ -20,4 +22,6 @@ html[dir="ltr"]  .ft-mod-link {
 html[dir="rtl"]  .ft-mod-link {
 	float:left; 
 	margin-right: 3px; 
+}
+
 }
