--- a/content/resources/css/forum-preview.css
+++ b/content/resources/css/forum-preview.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 #ctl00_ctl00_CPContent_CPMain_btnOK,
 #ctl00_ctl00_CPContent_CPMain_btnSendNew,
 #ctl00_ctl00_CPContent_CPMain_btnCancel {
@@ -6,4 +8,6 @@
 
 #ft-forum-preview-button {
 	margin-left:10px;
+}
+
 }
