--- a/content/resources/css/forum-templates.css
+++ b/content/resources/css/forum-templates.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 .ft-forum-template-container {
 	display: inline-block;
 	width: 125px;
@@ -13,4 +15,6 @@
 	display: inline-block;
 	width: 100px;
 	overflow: hidden;
+}
+
 }
