--- a/content/resources/css/forum-youth-icons.css
+++ b/content/resources/css/forum-youth-icons.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 /* forum-youth-icons.css */
 
 .HTMLToolbar img {
@@ -57,4 +59,6 @@
 }
 .HTMLToolbar img.f_settings {
 	background: url('chrome://foxtrick/content/resources/img/ht-ml/format_settings.png') no-repeat scroll 0 0 transparent;
+}
+
 }
