--- a/content/resources/css/goal-diff.css
+++ b/content/resources/css/goal-diff.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 /* Module GoaldifferenceToTables */
 
 /* positive goal difference */
@@ -13,4 +15,6 @@
 /* negative goal difference */
 .ft-gd-negative {
 	color: red;
+}
+
 }
