--- a/content/resources/css/header-fix-left.css
+++ b/content/resources/css/header-fix-left.css
@@ -1,5 +1,5 @@
 /* HeaderFix by Catalyst2950 */
-@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
 /* fix left submenu */
 #content .subMenu {
