--- a/content/resources/css/header-toggle.css
+++ b/content/resources/css/header-toggle.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 /* fixing toggle icon interferences */
 
 /* kicking ht archieve icon */
@@ -15,4 +17,6 @@
 h2.tblBox.ft-expander-expanded
 {
 	background-image: none;
+}
+
 }
