--- a/content/resources/css/htms-statistics.css
+++ b/content/resources/css/htms-statistics.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 .htms-bar {
 	height: 20px;
 	display: inline-block;
@@ -17,4 +19,6 @@
 
 .htms-stats-loss {
 	background-color: #849d84;
+}
+
 }
