--- a/content/resources/css/loyalty-display.css
+++ b/content/resources/css/loyalty-display.css
@@ -1,4 +1,4 @@
-@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
 .ft-percentImage {
 	margin: 0 0 -3px;
@@ -76,4 +76,5 @@ html[data-theme="standard"] img.ft-percentImage-loyalty-125 {
 html[data-theme="simple"] img.ft-percentImage-loyalty-125 {
 	background: #EEE url("chrome://foxtrick/content/resources/img/loyalty/loyalty_125_simple.png") top left no-repeat;
 }
+
 }
