--- a/content/resources/css/match-order.css
+++ b/content/resources/css/match-order.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 /* played last highlighting */
 html[dir="rtl"] .playedLast {
 	border-left : 4px solid #48f;
@@ -54,4 +56,6 @@ html[dir="ltr"] #order_tabs {
 /* make space for our playedlast highlighting */
 #orders #players .player .cards_health {
 	right: 1px !important;
+}
+
 }
