--- a/content/resources/css/match-player-colouring.css
+++ b/content/resources/css/match-player-colouring.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 .ft-match-player-home, .ft-match-player-away, .ft-match-player-mine {
 	padding: 0 2px !important;
 }
@@ -23,4 +25,6 @@
 
 .ft-match-event-away > td:first-child   {
 	text-align: right !important;
+}
+
 }
