--- a/content/resources/css/match-report.css
+++ b/content/resources/css/match-report.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 /* Using display to style events so that users could also style in
  * non-table way.
  */
@@ -82,4 +84,6 @@
 }
 .ft-match-report-event-away .ft-match-report-event-content {
 	border-color: #ccc;
+}
+
 }
