--- a/content/resources/css/match-simulator.css
+++ b/content/resources/css/match-simulator.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 /* our ratings as number */
 .overlayRatingsNum {
 	border-bottom: 1px solid #79A777;
@@ -148,4 +150,5 @@ html[dir="ltr"] #fieldOverlay.displayRight {
 #ft-copyRatingsButton {
 	float: left; position: absolute; bottom: 0px; left: 10px;
 }
-				
+
+}
