--- a/content/resources/css/matchgraphs.css
+++ b/content/resources/css/matchgraphs.css
@@ -1,3 +1,4 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
 /*div.foxtrick-showgraph {
  float:right;
@@ -93,4 +94,6 @@ div.foxtrick-graphs-right-bar {
  border:1px solid #000000;
  background-color: #CC0000;
  font-size:9px;
+}
+
 }
