--- a/content/resources/css/my-monitor.css
+++ b/content/resources/css/my-monitor.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 #ft-monitor-header {
 	margin-bottom: 0px !important;
 	margin-top: 20px !important;
@@ -54,4 +56,6 @@
 
 .ft-monitor-frame > h2 > a.flag + img {
 	margin-top:-2px;
+}
+
 }
