--- a/content/resources/css/nt-peek.css
+++ b/content/resources/css/nt-peek.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 .ft-nt-peek > .ft-nt-peek-nt {
 	width: 48%;
 	float: left;
@@ -10,4 +12,6 @@
 
 .ft-nt-peek td {
 	padding-right: 0; /* save some space */
+}
+
 }
