--- a/content/resources/css/staff-marker.css
+++ b/content/resources/css/staff-marker.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 /* Order by ascending priority since an element may have more than one class
    so that the last declared one wins. */
 
@@ -75,4 +77,6 @@
 
 .ft-staff-seperator {
 	background-color: #DDD;
+}
+
 }
