--- a/content/resources/css/table-of-statistical-truth.css
+++ b/content/resources/css/table-of-statistical-truth.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 #ft-truth-table-h2 {
 	margin-top: 20px;
 }
@@ -6,4 +8,4 @@
 	white-space:nowrap;
 }
 
-
+}
