--- a/content/resources/css/tableSort.css
+++ b/content/resources/css/tableSort.css
@@ -1,5 +1,7 @@
-@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 /*tablesort*/
 .htMlTable th { cursor: pointer;}
 #mainBody table th { cursor: pointer;}
+
 }
