--- a/content/resources/css/team-stats.css
+++ b/content/resources/css/team-stats.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+
 /* TeamStats */
 #ft-team-stats-box table {
 	table-layout:fixed;
@@ -20,3 +22,4 @@
 	font-size: 0.9em !important;
 }
 
+}
