--- a/content/resources/css/ticker-coloring.css
+++ b/content/resources/css/ticker-coloring.css
@@ -1,3 +1,4 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 /* Module TickerColoring */
 
 /* ticker links */
@@ -49,4 +50,6 @@
 /* My Hattrick message */
 .ft-ticker-myht {
 	background-color: #dfdfdf;
+}
+
 }
