--- a/content/resources/css/youth-series-estimation.css
+++ b/content/resources/css/youth-series-estimation.css
@@ -1,6 +1,13 @@
-@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
-#ctl00_ctl00_CPContent_CPMain_grdYouthSeries  td{white-space:nowrap;}
-#ctl00_ctl00_CPContent_CPMain_grdYouthSeries  .date {display:block;}
+#ctl00_ctl00_CPContent_CPMain_grdYouthSeries  td
+{
+	white-space:nowrap;
+}
+
+#ctl00_ctl00_CPContent_CPMain_grdYouthSeries  .date 
+{
+	display:block;
+}
 
 }
