--- a/content/resources/css/FoxtrickMatchTables_league.css
+++ b/content/resources/css/FoxtrickMatchTables_league.css
@@ -1,4 +1,4 @@
-@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+/*no @moz-doc since it's inject and only on that page anyway.adding @moz-doc will break sandboxed version */
 
 table[class="indent left thin"] td, table[class="indent right thin"] td {font-size: 0.95em !important; padding:1px 1px !important; height:24px;}
 
@@ -6,4 +6,3 @@ table[class="indent left thin"] td, table[class="indent right thin"] td {font-si
 #aspnetForm[action*="Default.aspx?LeagueLevelUnitID="] table.left  { width:48%;}
 #aspnetForm[action*="Default.aspx?LeagueLevelUnitID="] table.right  { width:52%;}
 
-}
