--- a/content/resources/css/fixes/RTL_Fixes_simple.css
+++ b/content/resources/css/fixes/RTL_Fixes_simple.css
@@ -1,5 +1,4 @@
-@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+/*no @moz-doc since it's inject and only on that page anyway.adding @moz-doc will break sandboxed version */
 
 div.mainRegular {margin: 0 0px 20px 10px !important;}
 
-}
