--- a/content/resources/css/matchgraphs.css
+++ b/content/resources/css/matchgraphs.css
@@ -1,4 +1,5 @@
-@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
+/*no @moz-doc since it's inject and only on that page anyway.adding @moz-doc will break sandboxed version */
+
 
 /*div.foxtrick-showgraph {
  float:right;
@@ -94,6 +95,4 @@ div.foxtrick-graphs-right-bar {
  border:1px solid #000000;
  background-color: #CC0000;
  font-size:9px;
-}
-
 }
