match-simulator.css: more/less colors changed
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8833 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-simulator.css
+++ b/content/resources/css/match-simulator.css
@@ -12,10 +12,10 @@
 
 /* rating differences highlighting */
 .colorLower {
-	color: red;
+	color: orange;
 }
 .colorHigher {
-	color: blue;
+	color: #00A9E0;
 }
 
 /* other teams ratings */
