transfer-deadline. tweak (rtl with space between day and number displays odd. one should be able to add the space in the translation if wanted)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8937 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/transfer-deadline.css
+++ b/content/resources/css/transfer-deadline.css
@@ -1,7 +1,7 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
 .ft-deadline {
-	margin-left: 10px;
+	border-left: 10px;
 	color: #800;
 }
 
