--- a/content/resources/css/match-simulator.css
+++ b/content/resources/css/match-simulator.css
@@ -51,6 +51,23 @@ html[dir="ltr"] #tacticLevelLabelOther {
 	right: 20px; 
 }
 
+/* match icons */
+.ftOptionIcon {
+	background-repeat: no-repeat;
+	padding: 0 20px;
+}
+.ftMatchLeague { background-image: url("chrome://foxtrick/content/resources/img/matches/matchLeague.png"); }
+.ftMatchQualification { background-image: url("chrome://foxtrick/content/resources/img/matches/matchQualification.png"); }
+.ftMatchCup { background-image: url("chrome://foxtrick/content/resources/img/matches/matchCup.png"); }
+.ftMatchFriendly { background-image: url("chrome://foxtrick/content/resources/img/matches/matchFriendly.png"); }
+.ftMatchTournament { background-image: url("chrome://foxtrick/content/resources/img/matches/matchTournament.png"); }
+
+html[opera] .ftMatchLeague , html[safari] .ftMatchLeague , html[chrome] .ftMatchLeague  { background-color: #C7FBBB}
+html[opera] .ftMatchQualification , html[safari] .ftMatchQualification , html[chrome] .ftMatchQualification  { background-color: #B7EBBB}
+html[opera] .ftMatchCup , html[safari] .ftMatchCup , html[chrome] .ftMatchCup  { background-color: #CCD2CC}
+html[opera] .ftMatchFriendly , html[safari] .ftMatchFriendly , html[chrome] .ftMatchFriendly  { background-color: white}
+html[opera] .ftMatchTournament , html[safari] .ftMatchTournament , html[chrome] .ftMatchTournament  { background-color: #FFC880}
+
 
 /* htms box */
 #ft-overlayHTMS {
