--- a/content/resources/css/fixes/BookmarkHeaderSmall.css
+++ b/content/resources/css/fixes/BookmarkHeaderSmall.css
@@ -1,16 +1,17 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
-.bookmarkMessage img {
+#aspnetForm[action*="Read.aspx"] .bookmarkMessage img {
 	background:transparent url('chrome://foxtrick/content/resources/img/bookmark_post.png') no-repeat scroll
 	0 0!important
 }
-.cfWrapper .bookmarkMessage {
+#aspnetForm[action*="Read.aspx"] .cfWrapper .bookmarkMessage {
 top:0px!important;
 margin-left:3px!important;
 float:right!important;
 }
-.bookmarkMessage img{
+#aspnetForm[action*="Read.aspx"] .bookmarkMessage img{
 width:12px!important;
 height:13px!important;
 }
+
 }
