--- a/content/resources/css/fixes/Forum_FoxLink_Headers.css
+++ b/content/resources/css/fixes/Forum_FoxLink_Headers.css
@@ -1,9 +1,9 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
-.cfHeader a.bookmarkSmall {
+#aspnetForm[action*="Read.aspx"] .cfHeader a.bookmarkSmall {
     display:none
 }
-.cfHeader a[href^="/Forum"] ~ a.bookmarkSmall {
+#aspnetForm[action*="Read.aspx"] .cfHeader a[href^="/Forum"] ~ a.bookmarkSmall {
     display:inline
 }
 
