--- a/content/resources/css/fixes/Forum_Header_CheckDesign.css
+++ b/content/resources/css/fixes/Forum_Header_CheckDesign.css
@@ -1,16 +1,17 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
 
-div.mainConf div.cfMessage, div.mainConf div.cfUser
+#aspnetForm[action*="Read.aspx"] div.mainConf div.cfMessage, 
+#aspnetForm[action*="Read.aspx"] div.mainConf div.cfUser
 {padding-top:0px !important;}
 
 /*div.mainConf div.cfMessageNoAvatar
 {padding-top:0px !important;}*/
 
-div.mainConf div.cfUser  div.faceCard
+#aspnetForm[action*="Read.aspx"] div.mainConf div.cfUser  div.faceCard
 { margin-bottom:-5px;}
 
-div.mainConf div.cfUser div.cfUserInfo
+#aspnetForm[action*="Read.aspx"] div.mainConf div.cfUser div.cfUserInfo
 { padding-top:5px;}
 
 }
