--- a/content/resources/css/fixes/Forum_Header_Single.css
+++ b/content/resources/css/fixes/Forum_Header_Single.css
@@ -1,17 +1,17 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
-.cfHeader a[class="flag inner"] img
+#aspnetForm[action*="Read.aspx"] .cfHeader a[class="flag inner"] img
 { margin: 0 0px 2px 0 !important; }
 
-div[class="cfHeader doubleLine"] b:after {content:" " !important;}
+#aspnetForm[action*="Read.aspx"]  div[class="cfHeader doubleLine"] b:after {content:" " !important;}
 
-.cfHeader a[class="bookmarkMessage"] img
+#aspnetForm[action*="Read.aspx"]  .cfHeader a[class="bookmarkMessage"] img
 {margin: 0 0px -2px 0 !important;}
 
-div[class="cfHeader doubleLine"]
+#aspnetForm[action*="Read.aspx"] div[class="cfHeader doubleLine"]
 {height:14px!important;}
 
-div[class="cfHeader doubleLine"] br
+#aspnetForm[action*="Read.aspx"] div[class="cfHeader doubleLine"] br
 {display:none !important; padding: 5px;}
 
 div[class="cfHeader ftdoubleLine"]
@@ -22,33 +22,37 @@ div[class="cfHeader ftdoubleLine"] b:after {content:" " !important;}
 /*obsoltete div[class="cfHeader ftdoubleLine"] br
 {display:none !important; padding: 5px;}*/
 
-div[class="cfHeader doubleLine"] p {display:inline;}
+#aspnetForm[action*="Read.aspx"] div[class="cfHeader doubleLine"] p {display:inline;}
 
 
 /* broken dsign workaround*/
-div.cfHeader>div[class="float_right right"]
+#aspnetForm[action*="Read.aspx"] div.cfHeader>div[class="float_right right"]
 {padding: 0px 2px 1px;}
 
-.cfHeader
+#aspnetForm[action*="Read.aspx"] .cfHeader
 {
     padding-right:0px !important;
 }
 
 
 /* broken design workaround*/
-div.mainConf div.cfInnerWrapper, div.mainConf div.cfInnerWrapperGreen , div.mainConf div.cfInnerWrapperRed
+#aspnetForm[action*="Read.aspx"] div.mainConf div.cfInnerWrapper, 
+#aspnetForm[action*="Read.aspx"] div.mainConf div.cfInnerWrapperGreen ,
+#aspnetForm[action*="Read.aspx"] div.mainConf div.cfInnerWrapperRed
 {margin-top:18px;}
 
-div.cfHeader>div[class="float_right right"]
+#aspnetForm[action*="Read.aspx"] div.cfHeader>div[class="float_right right"]
 {background: inherit;/* #849D84;*/}
 
-div.mainConf div.cfMessage, div.mainConf div.cfUser, div.mainConf div.cfMessageNoAvatar
+#aspnetForm[action*="Read.aspx"] div.mainConf div.cfMessage,
+#aspnetForm[action*="Read.aspx"] div.mainConf div.cfUser, 
+#aspnetForm[action*="Read.aspx"] div.mainConf div.cfMessageNoAvatar
 {padding-top:0px !important;}
 
-div.mainConf div.cfUser  div.faceCard
+#aspnetForm[action*="Read.aspx"] div.mainConf div.cfUser  div.faceCard
 { margin-bottom:-5px;}
 
-div.mainConf div.cfUser div.cfUserInfo
+#aspnetForm[action*="Read.aspx"] div.mainConf div.cfUser div.cfUserInfo
 { padding-top:5px;}
 
 }
