--- a/content/resources/css/fixes/Forum_Header_Smallsize_Single.css
+++ b/content/resources/css/fixes/Forum_Header_Smallsize_Single.css
@@ -1,14 +1,16 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
-.cfHeader a[class="flag inner"] img
+#aspnetForm[action*="Read.aspx"] .cfHeader a[class="flag inner"] img
 { border: 0px solid #DDDDDD !important; }
 
-.cfHeader
+#aspnetForm[action*="Read.aspx"] .cfHeader
 {
     padding-left:0px !important;
 }
 
-.cfHeader, .cfHeader img, .cfHeader a,  .cfHeader .float_right
+#aspnetForm[action*="Read.aspx"] .cfHeader, .cfHeader img,
+#aspnetForm[action*="Read.aspx"] .cfHeader a,
+#aspnetForm[action*="Read.aspx"] .cfHeader .float_right
 {
     padding-left:0px;
     padding-right:0px;
