--- a/content/resources/css/fixes/HideLeagueInForumHeader.css
+++ b/content/resources/css/fixes/HideLeagueInForumHeader.css
@@ -1,5 +1,5 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
-div.mainConf  div.cfHeader a[class="flag inner"] + a {display:none;}
+#aspnetForm[action*="Read.aspx"] div.mainConf  div.cfHeader a[class="flag inner"] + a {display:none;}
 
 }
