--- a/content/resources/css/popup-links.css
+++ b/content/resources/css/popup-links.css
@@ -5,7 +5,8 @@
 	display:inline;
 }
 
-#ctl00_ctl00_CPContent_CPMain_repLeagueTable td .ft-popup-span {
+/* fix for vanishing links in rtl tables*/
+html[dir="rtl"] td .ft-popup-span {
 	display:block;
 }
 
@@ -19,7 +20,12 @@ ul.ft-popup-list {
 	z-index: 10000;
 	list-style-type: none;
 	margin:0px;
+}
+html[dir="ltr"] ul.ft-popup-list {
 	left:10px;
+}
+html[dir="rtl"] ul.ft-popup-list {
+	right:10px;
 }
 
 /* just not in messages*/
