--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -247,4 +247,9 @@ html[data-theme="simple"] body[style*="font-size:0.79em;"] #ctl00_ctl00_CPConten
 	white-space: nowrap;
 }
 
+
+.ownTeamHighlight {
+background-color: #eed;
+}
+
 }
