--- a/content/resources/css/match-simulator.css
+++ b/content/resources/css/match-simulator.css
@@ -61,12 +61,15 @@ html[dir="ltr"] #tacticLevelLabelOther {
 .ftMatchCup { background-image: url("chrome://foxtrick/content/resources/img/matches/matchCup.png"); }
 .ftMatchFriendly { background-image: url("chrome://foxtrick/content/resources/img/matches/matchFriendly.png"); }
 .ftMatchTournament { background-image: url("chrome://foxtrick/content/resources/img/matches/matchTournament.png"); }
+.ftUpcomingNationalIcon { background-image: url("chrome://foxtrick/content/resources/img/matches/upcomingNationalIcon.png"); }
+
 
 html[opera] .ftMatchLeague , html[safari] .ftMatchLeague , html[chrome] .ftMatchLeague  { background-color: #C7FBBB}
 html[opera] .ftMatchQualification , html[safari] .ftMatchQualification , html[chrome] .ftMatchQualification  { background-color: #B7EBBB}
 html[opera] .ftMatchCup , html[safari] .ftMatchCup , html[chrome] .ftMatchCup  { background-color: #CCD2CC}
 html[opera] .ftMatchFriendly , html[safari] .ftMatchFriendly , html[chrome] .ftMatchFriendly  { background-color: white}
 html[opera] .ftMatchTournament , html[safari] .ftMatchTournament , html[chrome] .ftMatchTournament  { background-color: #FFC880}
+html[opera] .ftUpcomingNationalIcon , html[safari] .ftUpcomingNationalIcon , html[chrome] .ftUpcomingNationalIcon  { background-color: #FFC880}
 
 
 /* htms box */
