--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -248,7 +248,7 @@ html[data-theme="simple"] body[style*="font-size:0.79em;"] #ctl00_ctl00_CPConten
 }
 
 
-.ownTeamHighlight {
+.ftTeamHighlight {
 background-color: #eed;
 }
 
