player-filters.js: attribute filters added
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9195 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -92,7 +92,8 @@ td.ft-lineup-cell { vertical-align: middle !important; }
 
 /* TeamStats filter */
 .ft-select-container { float: right; width: auto; }
-.ft-select-container select { display: block; margin: 0 !important; clear: right; }
+.ft-select-container > select { display: block; margin: 0 !important; clear: right; }
+#foxtrick-filter-select option[value="attribute-all"] {background-color:#ccc;}
 
 /* FoxTrick note */
 .ft-note {
