match-simulator: added att-vs-att, htms optional now, addMatch:select auto/home/away ratings
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9211 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-simulator.css
+++ b/content/resources/css/match-simulator.css
@@ -147,7 +147,14 @@ html[dir="ltr"] .overlayMidDefense, .overlayMidAttack {
 	top: 470px !important;
 }
 
-
+#ft_matchsimulator_options {
+	left: 395px !important;
+}
+#ft_matchsimulator_options div{
+	float:left;
+	padding-left: 20px;
+}		
+		
 /* field overlay display options */
 #fieldOverlay.displayBelow {
 	height: 520px;
@@ -170,5 +177,25 @@ html[dir="ltr"] #fieldOverlay.displayRight {
 #ft-copyRatingsButton {
 	float: left; position: absolute; bottom: 0px; left: 10px;
 }
+
+
+#ft-matchSelect {
+	float: left; 
+	position: absolute; 
+	bottom: 0px; 
+	left: 80px;
+}
+
+#addMatchDiv {
+	float: left; 
+	left: 80px;
+	position: absolute; 
+	bottom: 0px; 
+}
+
+#addMatchhomeAwayLabel, #addMatchisHTOIntegrated, #addMatchButton {
+	margin-left: 20px;
+}
+
 
 }
