match-report.css: use ht color for halftimebars etc
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9236 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-report.css
+++ b/content/resources/css/match-report.css
@@ -68,7 +68,7 @@
 .ft-match-report-penalty-shoot-out,
 .ft-match-report-result {
 	color: white;
-	background-color: #00a9e0;
+	background-color: #849D84;
 	padding: 2px 0 2px 5px;
 	border: 1px solid #ccc;
 	margin: 5px 0;
