--- a/content/resources/css/my-monitor.css
+++ b/content/resources/css/my-monitor.css
@@ -1,5 +1,9 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
+#ft-monitor-div {
+	margin-bottom: 20px ;
+}
+
 #ft-monitor-header {
 	margin-bottom: 0px !important;
 	margin-top: 20px !important;
