youth-twins : Improved styling
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9290 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/youth-twins.css
+++ b/content/resources/css/youth-twins.css
@@ -1,6 +1,9 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
-.ft-youth-twins-icon {
+.ft-youth-twins-icon-first {
 	padding-left: 4px;	
+}
+.ft-youth-twins-icon-following {
+	padding-left: 1px;	
 }
 }
