--- a/content/resources/css/youth-twins.css
+++ b/content/resources/css/youth-twins.css
@@ -1,9 +1,18 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
-.ft-youth-twins-icon-first {
-	padding-left: 4px;	
-}
-.ft-youth-twins-icon-following {
+.ft-youth-twins-icon {
 	padding-left: 1px;	
+}
+.ft-youth-twins-container {
+	display: inline;
+	padding-left: 4px;
+}
+html[dir="rtl"] .ft-youth-twins-icon {
+	padding-right: 1px;	
+}
+
+html[dir="rtl"] .ft-youth-twins-container {
+	display: inline;
+	padding-right: 4px;
 }
 }
