--- a/content/resources/css/transfer-deadline.css
+++ b/content/resources/css/transfer-deadline.css
@@ -1,7 +1,7 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
 .ft-deadline {
-	border-left: 10px;
+	margin-left: 10px;
 	color: #800;
 }
 
