youth-twins.css: Adjusted RTL to act the same as LTR
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9317 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/youth-twins.css
+++ b/content/resources/css/youth-twins.css
@@ -8,11 +8,13 @@
 	padding-left: 4px;
 }
 html[dir="rtl"] .ft-youth-twins-icon {
-	padding-right: 1px;	
+	padding-right: 1px;
+	padding-left: 0px !important;		
 }
 
 html[dir="rtl"] .ft-youth-twins-container {
 	display: inline;
 	padding-right: 4px;
+	padding-left: 0px !important;
 }
 }
