youth-twins.css: Hmm? !important interfered with LTR too, weird. Or i suck, removed !important from RTL
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9318 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/youth-twins.css
+++ b/content/resources/css/youth-twins.css
@@ -9,12 +9,12 @@
 }
 html[dir="rtl"] .ft-youth-twins-icon {
 	padding-right: 1px;
-	padding-left: 0px !important;		
+	padding-left: 0px;		
 }
 
 html[dir="rtl"] .ft-youth-twins-container {
 	display: inline;
 	padding-right: 4px;
-	padding-left: 0px !important;
+	padding-left: 0px;
 }
 }
