Exerimental MatchReportFormat on Live pages: First commit
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9363 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-report.css
+++ b/content/resources/css/match-report.css
@@ -60,7 +60,8 @@
 	padding-left: 10px;
 	vertical-align: top;
 }
-
+.ft-match-report-lineup,
+.ft-match-report-match-report,
 .ft-match-report-kick-off,
 .ft-match-report-half-time,
 .ft-match-report-full-time,
