live-match-report-format.js: Seperator styling like normal match report
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9374 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-report.css
+++ b/content/resources/css/match-report.css
@@ -70,7 +70,7 @@
 .ft-match-report-result {
 	color: white;
 	background-color: #849D84;
-	padding: 2px 0 2px 5px;
+	padding: 2px 0 2px 5px !important;
 	border: 1px solid #ccc;
 	margin: 5px 0;
 	font-size: 115%;
