match-order: Also show playedLast on the field. (changes border to blue as in the list)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9399 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-order.css
+++ b/content/resources/css/match-order.css
@@ -18,8 +18,6 @@ html[dir="ltr"] .playedOther, html[dir="ltr"] .playedSecondLast {
 	padding: 3px 9px 3px 2px !important;
 }
 
-
-
 #ft_swap_positions {
 	background-color: #3f7137; 
 	float: left; 
@@ -32,7 +30,6 @@ html[dir="ltr"] .playedOther, html[dir="ltr"] .playedSecondLast {
 	color: White; 
 	text-decoration: underline; 
 }
-
 
 /****** changes to ht sytles ****/
 
@@ -56,6 +53,16 @@ html[dir="ltr"] #order_tabs {
 /* make space for our playedlast highlighting */
 #orders #players .player .cards_health {
 	right: 1px !important;
+}
+
+#orders .position > .player.field-playedLast {
+	border: 2px solid #48f !important;
+}
+
+#orders .position > .player.field-playedSecondLast {
+}
+
+#orders .position > .player.field-playedOther {
 }
 
 }
