--- a/content/resources/css/match-order-faces.css
+++ b/content/resources/css/match-order-faces.css
@@ -1,7 +1,7 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
-.field .box_lineup, .field .box_substitute {
-	background-image:url("chrome://foxtrick/content/resources/img/box_lineup.png");
+.field .box_lineup.smallFaceCardBox, .field .box_substitute.smallFaceCardBox {
+	background-image:url("chrome://foxtrick/content/resources/img/box_lineup.png") !important;
 }
 
 .field  .smallFaceCardOuter {
