player-stats.css : Imcreased saturation of coloring after discussion with red-green blind people
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9535 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/player-stats.css
+++ b/content/resources/css/player-stats.css
@@ -36,17 +36,17 @@ border-radius: 3px;
 
 .ft-xp-walkover {
 	text-decoration: line-through;
-	background-color: #ffabab;
+	background-color: #ff6666;
 }
 
 .ft-xp-incomplete {
-	background-color: #ffabab;
+	background-color: #ff6666;
 }
 .ft-xp-complete {
-	background-color: #abffab;
+	background-color: #66ff66;
 }
 .ft-xp-skillup {
-	background-color: #feffab !important;
+	background-color: #fcff66 !important;
 }
 
 .ft-xp-data-value {
