--- a/content/resources/css/match-order-faces.css
+++ b/content/resources/css/match-order-faces.css
@@ -1,5 +1,6 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
+/* old lineup */
 .field .box_lineup.smallFaceCardBox, .field .box_substitute.smallFaceCardBox {
 	background-image:url("chrome://foxtrick/content/resources/img/box_lineup.png") !important;
 }
@@ -8,6 +9,13 @@
 	position: relative;
 	top: -10px;
 	left: 0px;
+}
+
+/* current linup */
+#field .shirt .nr {
+  z-index: 9;
+  top: 31px !important;
+  left: 0px !important;
 }
 
 }
