skill-color.css : Padding for traning skills
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9603 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/skillcolors/skill-color.css
+++ b/content/resources/skillcolors/skill-color.css
@@ -46,3 +46,6 @@ a[href*="=20#skill"], a[href*="ll=20#FanMood"], a[href*="ll=20#FanMatch"], a[hre
 
 a:hover[href*="#skill"], a:hover[href*="#FanMood"], a:hover[href*="#FanMatch"], a:hover[href*="#FanSeason"], a:hover[href*="#SkillShort"], a:hover[href*="#gentleness"], a:hover[href*="#aggressiveness"], a:hover[href*="#honesty"], a:hover[href*="#teamskills"], a:hover[href*="#sponsors"], a:hover[href*="#morale"], a:hover[href*="#confidence"]
 {background-color:transparent !important; color:#267F30 !important;}
+
+#experienceView-text > li 
+{ padding-bottom: 3px !important; }
