New small Module: TransferHistoryFilters as requested in #940
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9608 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -248,9 +248,12 @@ html[data-theme="simple"] body[style*="font-size:0.79em;"] #ctl00_ctl00_CPConten
 	white-space: nowrap;
 }
 
-
 .ftTeamHighlight {
 background-color: #eed;
+}
+
+.ft-clear-both {
+	clear:both;
 }
 
 }
